# Pro_Trading_DS

./: .gitignore  start.bat
.sisyphus/notepads/frontend-refactor/: learnings.md
.sisyphus/plans/: frontend-refactor.md  lobster-quant-loading-restructure.md
docs/superpowers/plans/: 2026-04-29-Pro_Trading_DS-remediation.md  2026-04-29-frontend-refactor.md
docs/superpowers/specs/: 2026-04-29-frontend-refactor-design.md
lobster_quant/: .env.example  .gitignore  Makefile  README_v2.md  REFACTOR_STATUS.md  app.py  app_v2.py  backtest.py  config.py  data_fetcher.py  debug_backtest.py  indicators.py  lobster_off_filter.py  lobster_signal.py  off_filter.py  pyproject.toml  quant_tool_data.py  quant_tool_indicators.py  quant_tool_page.py  requirements.txt  scoring.py  test_app.py  test_final.py  test_integration.py  test_quant_tool.py  theme_manager.py
lobster_quant/docs/: ARCHITECTURE_REVIEW.md  FIX_SUMMARY.md  REFACTOR_PLAN.md  code.md  description.md
lobster_quant/legacy/: __init__.py  backtest.py  data_fetcher.py  debug_backtest.py  indicators.py  lobster_off_filter.py  lobster_signal.py  off_filter.py  quant_tool_data.py  quant_tool_page.py  scoring.py  test_app.py  test_final.py  test_integration.py  test_quant_tool.py
lobster_quant/src/: __init__.py  compat.py
lobster_quant/src/analysis/: __init__.py
lobster_quant/src/analysis/backtest/: __init__.py  engine.py  metrics.py
lobster_quant/src/analysis/indicators/: __init__.py  base.py  momentum.py  trend.py  volatility.py  volume.py
lobster_quant/src/analysis/signals/: __init__.py  composite_signal.py  lobster_signal.py
lobster_quant/src/config/: __init__.py  defaults.yaml  settings.py  validation.py
lobster_quant/src/core/: __init__.py  data_engine.py  events.py  indicator_engine.py  risk_engine.py  scoring_engine.py  signal_engine.py
lobster_quant/src/data/: __init__.py  cache.py  models.py
lobster_quant/src/data/providers/: __init__.py  akshare_provider.py  base.py  mock_provider.py  yfinance_provider.py
lobster_quant/src/ui/: __init__.py  help_content.py  theme.py
lobster_quant/src/ui/components/: __init__.py  cards.py  charts.py  filters.py  help.py
lobster_quant/src/ui/pages/: __init__.py  analyzer.py  backtest.py  dashboard.py  quant_tool.py  quant_tool_indicators.py  scanner.py  settings.py
lobster_quant/src/utils/: __init__.py  exceptions.py  logging.py  validators.py
lobster_quant/tests/: conftest.py
lobster_quant/tests/fixtures/: sample_data.py
lobster_quant/tests/integration/: test_e2e.py
lobster_quant/tests/unit/: test_backtest_engine.py  test_cache.py  test_composite_signal.py  test_data_engine.py  test_events.py  test_indicators.py  test_models.py  test_risk_engine.py  test_scoring_engine.py  test_settings.py  test_signal_engine.py  test_signal_generator.py  test_validators.py
